Did a clean-up refactoring